@startuml
!theme plain
title Пакеты корректировок — ER

entity CorrectionBatch {
  * id: GUID
  --
  * correction_date: date
  * week: int
  * day_of_week: int (1..7)
  * status: string (Draft|Applied|Cancelled)
  * created_by_user_id: GUID (FK, nullable)
  applied_by_user_id: GUID (FK, nullable)
  applied_at: datetime
  * created_at: datetime
  * updated_at: datetime
}

entity CorrectionPosition {
  * id: GUID
  --
  * batch_id: GUID (FK)
  * row: int
  * change_type: string (Add|Remove|Replace|Move)
  * group_id: GUID (FK)
  * group_name: string
  * day_of_week: int
  * week: int
  * number_pair: int
  subject: string
  teacher_id: GUID (FK, nullable)
  teacher_name: string
  removed_subject: string
  removed_teacher_id: GUID (FK, nullable)
  removed_teacher_name: string
  removed_number_pair: int
  note: string
  * status: string (Draft|Applied)
  history_id: GUID (FK, nullable)
  * created_at: datetime
  * updated_at: datetime
}

entity ScheduleHistory {
  * id: GUID
  --
  * change_type: string (Add|Remove|Replace)
  * group_id: GUID (FK)
  * week: int
  * applied_at: datetime
  note: string
}

entity User {
  * id: GUID
  --
  * full_name: string
  * role: string
}

CorrectionBatch ||--o{ CorrectionPosition : contains
User ||--o{ CorrectionBatch : created
User ||--o{ CorrectionBatch : applied
CorrectionBatch o--o{ ScheduleHistory : apply_result
CorrectionPosition |o--o| ScheduleHistory : history_id (после применения)

note bottom of CorrectionPosition
  «сам.р.» допустимо только для
  change_type = Remove: пара не
  удаляется, неделя сохраняется,
  бейдж по ScheduleHistory.note
end note

@enduml